# loam

./: .gitignore  AGENTS.md  LICENSE  README.md  WHY.md  dist-workspace.toml  package-lock.json  package.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
adapters/: claude-session-start.mjs  cursor-session-start.mjs  opencode.mjs
cli/: Cargo.toml
cli/src/: check.rs  checkpoint.rs  codegraph.rs  datecheck.rs  json.rs  lint.rs  main.rs  markdown.rs  memory.rs  sha256.rs  state.rs
cli/tests/: check_versions.rs  checkpoint_parity.rs  checkpoint_state.rs  checkpoint_verify.rs  codegraph.rs  codegraph_index.rs  datecheck.rs  lint_cli.rs  lint_memory.rs  lint_work.rs  markdown.rs  sha256.rs  state.rs  state_budget.rs  state_parity.rs
commands/: checkpoint.md
docs/: commands-install.md
hooks/: hooks-cursor.json  hooks.json  session-start  session-start.mjs
integration/: context.mjs  loam.mjs  metadata.mjs  paths.mjs  runtime.mjs  shadow.mjs
plans/: INDEX.md  agent-owned-memory.md
setup/: args.mjs  atomic.mjs  config.mjs  constants.mjs  discovery.mjs  errors.mjs  harnesses.mjs  inventory.mjs  lock.mjs  main.mjs  migration.mjs  package-check.mjs  process.mjs  runtime.mjs  skills.mjs  target.mjs  transaction.mjs  uninstall.mjs  verify.mjs  wizard.mjs
specs/: INDEX.md  agent-owned-memory.md
tests/: args.test.mjs  compatibility.test.mjs  harnesses.test.mjs  integration.test.mjs  inventory.test.mjs  lock.test.mjs  package-fixture.test.mjs  (+5 more)
(+116 files in other folders)
