[package]
name = "loam"
version = "0.9.1"
edition = "2021"
publish = false
repository = "https://github.com/scchearn/loam"

[package.metadata.dist]
dist = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = { version = "0.12", default-features = false }
